GD and SGD experiments done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "/opt/anaconda3/envs/pptk/bin/python"
+  "python.pythonPath": "C:\\Users\\bijon\\anaconda3\\envs\\pytorch\\python.exe"
 }
